@@ -9,15 +9,17 @@ DIST layman-2.1.0.tar.gz 94150 SHA256 cb96306c84da1d49ff54a31f7511c62c859565361b
 EBUILD layman-2.0.0-r1.ebuild 1794 SHA256 21f8fbad6d554b7d174e7b4530c73ca2c84611a3c2cdec138a58c0141a5c386f SHA512 ccfd9b8bbb9a9c419973a80de00c74220af898615f4b72dfe3ed38a39bab0024313ce2f9d7de20b6f023b9acc258f6015b549b08a2056e91fcba41b14cd41282 WHIRLPOOL 2cc3986c877587ab38bba2778617b87458ccb6a7b20f9dc10cd4b1916100f1af83b36787daacae4bf94cb64e55b0d005396807e549c9899c5ddbaffe9837848e
 EBUILD layman-2.0.0-r3.ebuild 1835 SHA256 b06fd605e6efcfe7d83ef25f84202e2b782ff2105789e8dab5dc4d2278af2769 SHA512 8c2005cd431aab37410db4bddcfdb3f1bf6c36507447ad00b63403cafc57be3fd27166ebb205be76c9e1063cd4ed535df76838bf780a381dd91f1656f24b34e4 WHIRLPOOL f37604983bda4ed11742b29050a1c1fc93ee5cedf8c2efd444f54dd1907a17398b709f01f9508aca0ce9654cafdd1a664efde30a97ba526b04f11433db8d1715
 EBUILD layman-2.1.0-r2.ebuild 1848 SHA256 c685fdbc2c7dcd81d9ac16becea96c7fad22eb9de72fcfd98171ca15cd4df133 SHA512 180ff86e04c1377eb2a1457bf47b3bd7f8b9d5799c596b7f53d80db2ef51108f27971736d1f11598c3830542fe8b314f13fae0776dbc09828a5ee44784ac0747 WHIRLPOOL 12437e59967e0a293ece62f78013a19b0b2ab74452df0cdb99d8abc9d7a57aafabcb39b08b79e29f00dd8e7afe1264f6d5736566ec3f861077f509efa0b4525d
-EBUILD layman-9999.ebuild 1755 SHA256 07ca8be9e73ede530d0659038c1bec90df613aff7aa313442286998dc5eafbd2 SHA512 2a707ee87aad01b70945a7b9d6c44264d6a437a0c4bb2dbe856b286a098271170657b3acc5ebb4bdfaac5a33cf0ec1ef1d8f55f0ccc8324a3fd7d980a2f6c8b1 WHIRLPOOL 6b9baeb1eba7bdcf8bb721271fd6171c6edd2c5641f22cd773e32e2e452bcfbb882daace690ed32416e3a5f9b75eb0e514dbc9f867a6e02101d62e5acaae987a
-MISC ChangeLog 30220 SHA256 3fe61bd6962bdf5e6ecd9e3be7c9d052a4210a922d9d11dadd57c2c60b31eb81 SHA512 27623be30d76fdb7f2d7358d136ba575f634cfdb793b799c6ddb6d56025b517e9b4c443c853bd033ca8e86cc83cbc0ab8d4b7b20b007ccba31ffd2bca465fd76 WHIRLPOOL c25405fc25bc3ba02725f6667e781278a9aca9d5494f413f7315aa033c58a43d959dff3ccee884d4b4e607a0048fea8a4168a9182ff02e54d87126a23f06a9fe
-MISC metadata.xml 836 SHA256 3aaac2f91eb9af7ded8b8c7c2850a59af0fbc9dc9ca0cb013b718e491b28a3e4 SHA512 fa3aca7820dddaaa3c2860bb5d9ba7da492d0cc89d00873c930531e12b6c0dcda934cdb25ec3a9dd3b6e131a97f2019240299354263cd480d186692a5ee49e9c WHIRLPOOL 4e1a86b99846aab594510bcebdca54266706ada289b99513bc2d4c928a89746835cf3e0be03668b038c778d6c96b690e55ab4735bd2a12aca05728fb914a8e15
+EBUILD layman-9999.ebuild 1905 SHA256 eadc9a7a82d1359a095ec2baadbc809df8bf9fba0e1f7bed05786fb0988981ab SHA512 1026efcf7c472bcae9ea0db3fdf87bd4e4e5fee6e5dbd3d8b92e8ce173f742c1198ce7fb297df415fa3cb6d0d2cb64281640bf09bf933986246de18754bf9d65 WHIRLPOOL 465d5d37ae8aa8b5b576fb63c58cde8acf24e9d7fd792958af3d97923d21ae73586cf71b9658a9a62e18864a8913359c52cd3aeebcace8b96aaf4a451b07b1c7
+MISC ChangeLog 30352 SHA256 f80f7e36105fa19e5fde84988bd3cd0f02d5680403105b3de8b6dc9facce64bc SHA512 4a6720a7f6d5608dd1acbb36986a51719a6262e91ade992c852206e6c801d2295b5025b43607ebfbed786127ceb201aed40db8177f227cfde5738e60f10f83a4 WHIRLPOOL 6f7c6660af2e92441c6070103bb22eab13be43e1c4840f72d57a957692a8efd1e77811c28ae0d76474e9ea9bb9c67d858245668dc5d3f444869289684aa489dc
+MISC metadata.xml 1014 SHA256 cd100243aa6c69055f857904b6671d7145a2f5604fd95e7cc6353cb0bd8419db SHA512 49027f9cdbe6d76e12c1eb814c498c70be47dd627c9afe544752d4d76809de5931b21e59bcfa831e70b04333b3d844d12cf1ea1f7b7194bbf8da531392af9a5a WHIRLPOOL 2c66f91864476bdcfd7d174b38a57ac980c3ccb65e6946bf0be7f2b794de3221d21607575b5167755a280ea4b22f76414e4921075ec9baab22843251e2f12c5f
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlPWtbUACgkQG9wOWsQutdbiXQP/Xz7bL+Q0tuI4jay5nsQNv3ZU
-xmtDa2YgKYEqXmVgFQPXl/n9bpIlDmEYdINejNzxq1ioPOILutB8XbkTi0fnFweU
-xAscKEC5VijB4kI8+Da4+uyuMN/G3txuHEToOy9Pj6Nud9VaJQbfsxadOc/dcV3c
-iNFZYIibZcMxh7h4PBI=
-=k3mW
+iQEcBAEBCAAGBQJT8A5OAAoJEOf5eU+oyPvPjQAH/jJGFksMVh2CKnbHWuZuB5/A
+0tULRVEBr6LA68I8Kj2+3UQ+Gkx/Q9mTw+sV3GFOLJHlwZgUwZTOvZSC1Y/OWpZV
+9H3bHSOlbvUECUmDsPA6VFROIvDxit9T+myKVHWNRb3n75B5nQNK55RBd2BRh50q
+hVcumE1o9V1UzDQWcFgWpXQTZ/K2EcLrL7XRkMhLaR0SM2Cz4Rqh1gDrcXHFJfW4
+AWvdxZXxabxIFNjg01AetWTkUDslJfG5EY/GI/Z+/4uISolefnPgzFuXJISRmxZ4
+zhpV/Jlo3BUK2W6XSCwvyfwQpV39t+yqhTViaV3g4daThqFdc5A1LT6bzKBA4Og=
+=DCt3
 -----END PGP SIGNATURE-----
