@@ -1,6 +1,10 @@
 # ChangeLog for app-portage/layman
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.202 2014/07/28 20:37:16 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-portage/layman/ChangeLog,v 1.203 2014/08/17 02:07:02 twitch153 Exp $
+
+  17 Aug 2014; Devan Franchini <twitch153@gentoo.org> layman-9999.ebuild,
+  metadata.xml:
+  Updates 9999 to reflect new features
 
   28 Jul 2014; Mikle Kolyada <zlogene@gentoo.org> layman-2.0.0-r3.ebuild:
   ppc64 stable wrt bug #508882
